--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "localstoragedb": "^2.3.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-icons": "^3.8.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0"
   },
